Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4542

ASAN error with HTTP/2

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 6.2.0, 7.0.0
    • HTTP/2
    • None

    Description

      ==29132==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000250 (pc 0x0000009a1be5 sp 0x2ae2c2ab0290 bp 0x2ae2c2ab0370 T20)
          #0 0x9a1be4 in Ptr<ProxyMutex>::operator ProxyMutex*() const ../../../trafficserver/lib/ts/Ptr.h:317
          #1 0x9a1be4 in Http2ConnectionState::schedule_stream(Http2Stream*) ../../../trafficserver/proxy/http2/Http2ConnectionState.cc:974
          #2 0x99eb7f in Http2ConnectionState::restart_streams() ../../../trafficserver/proxy/http2/Http2ConnectionState.cc:914
          #3 0x99eb7f in rcv_window_update_frame ../../../trafficserver/proxy/http2/Http2ConnectionState.cc:627
          #4 0x9b27c4 in Http2ConnectionState::main_event_handler(int, void*) ../../../trafficserver/proxy/http2/Http2ConnectionState.cc:823
          #5 0x9906e3 in Continuation::handleEvent(int, void*) ../../../trafficserver/iocore/eventsystem/I_Continuation.h:153
          #6 0x9906e3 in send_connection_event ../../../trafficserver/proxy/http2/Http2ClientSession.cc:58
          #7 0x991145 in Http2ClientSession::state_complete_frame_read(int, void*) ../../../trafficserver/proxy/http2/Http2ClientSession.cc:430
          #8 0x992ba0 in Continuation::handleEvent(int, void*) ../../../trafficserver/iocore/eventsystem/I_Continuation.h:153
          #9 0x992ba0 in Http2ClientSession::state_start_frame_read(int, void*) ../../../trafficserver/proxy/http2/Http2ClientSession.cc:403
          #10 0xe2be16 in Continuation::handleEvent(int, void*) ../../../trafficserver/iocore/eventsystem/I_Continuation.h:153
          #11 0xe2be16 in read_signal_and_update ../../../trafficserver/iocore/net/UnixNetVConnection.cc:153
          #12 0xe2be16 in UnixNetVConnection::readSignalAndUpdate(int) ../../../trafficserver/iocore/net/UnixNetVConnection.cc:1036
          #13 0xdc791e in SSLNetVConnection::net_read_io(NetHandler*, EThread*) ../../../trafficserver/iocore/net/SSLNetVConnection.cc:595
          #14 0xde7db0 in NetHandler::mainNetEvent(int, Event*) ../../../trafficserver/iocore/net/UnixNet.cc:513
          #15 0xea2ce9 in Continuation::handleEvent(int, void*) ../../../trafficserver/iocore/eventsystem/I_Continuation.h:153
          #16 0xea2ce9 in EThread::process_event(Event*, int) ../../../trafficserver/iocore/eventsystem/UnixEThread.cc:148
          #17 0xea2ce9 in EThread::execute() ../../../trafficserver/iocore/eventsystem/UnixEThread.cc:275
          #18 0xe9e128 in spawn_thread_internal ../../../trafficserver/iocore/eventsystem/Thread.cc:86
          #19 0x2ae2b8e85aa0 in start_thread (/lib64/libpthread.so.0+0x3818807aa0)
          #20 0x38180e893c in clone (/lib64/libc.so.6+0x38180e893c)
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: