TS-4542: ASAN error with HTTP/2